fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:w8SV8SGvr2TIsCrV7COHUp8JSLUFCpAPlYlRKXpvnZpEaW5fEavBNzsFzymwGkSnX1O9o+2wu3D+KR2Ah5XOPfI=,iv:aoTulxj1c6Gp2dFXW9xj3O7iDgwhRWWk5zIP5prS210=,tag:2JQ754/OtHPouE1UrAL2OQ==,type:comment]
-#ENC[AES256_GCM,data:Dc6YGBj+PzKMb5MSZxgCTDrlfHQmMpX6jzCstESWAFN3uhX3dYjahv1HnOo=,iv:cBRh9ovp2K62jUDj/ThSUaJ4CmwB3Q+9LfwB/XDTbcg=,tag:KUmlNtV/xxTBP59DTvAtZg==,type:comment]
-VIP: ENC[AES256_GCM,data:K1kvItfc/R1NSXaWTw==,iv:6zcXKsjD4bf/tHV7mvOsq/QnO4nmG076Jrj13dzGGzs=,tag:XBPJWsjhBuB7tL2pDETOHw==,type:str]
-#ENC[AES256_GCM,data:0D1/5rLWPZHvG6QX9ljz8njjS7mOYmG0BXpT,iv:0QFsydNTH3Qu9FnyA/VbO6W4y3dC30zJsIh+Zt2KTMo=,tag:/zfUHc1+fagntuL0szmV5Q==,type:comment]
-#ENC[AES256_GCM,data:US+bnZlEFWhuJUIy9BHiRjUHm/Nm/DTRWnUprCRGFRB3BE9dOg6VM58O5pxKnsEtCA3A0aDsPgxc9+uPXTaRGdVShVyZWzxXJ/pLIPrbntC1R0pTT6CgvyY=,iv:Oc/7R4F85K7Z3lM4TcekmyDewVtb5bt63zx6rr36+TI=,tag:ZpT2f816KGDLswSs7Bd9eQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:+g2BfPbg4Z+xwIVdQJ4=,iv:RerrR4YvN0VD3BO7D0iYeccH5VfR0aLSkonWAs234hE=,tag:a7CKkaY55yYkoVwViFhxfw==,type:str]
-#ENC[AES256_GCM,data:Yu5AFKkVTTgCtlecTRewE7Q6juP3MyKiN0gidw7Wy7uCeQ==,iv:TFQWe6kBGQlR7W13qubnU5zpKtCYWGXjqxBFbHHFp1I=,tag:3QP7FAok7ZDfzAX2kcxCLQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:jl7XcAEaKW9PnK7KVA==,iv:fKwyqM5SZHQRVNcmv/4ntGhys5QxfSx8VZnqDS1SR14=,tag:e6/ppixG5kFTvQ/PyKd2fQ==,type:str]
-#ENC[AES256_GCM,data:s4H03HDgt2WbdG+p+KAmiDMwho9eyvA86Zb5Ls3tZpZkjodN4DToxUpAzNAC+U0=,iv:xERUQHySniggGI1jIzaJAs+3Ujr3hrAwC1geuGbJjEg=,tag:cxpGxBcmvcYFFPyvT2bKBA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:39+fx4TVucPZ9eRuQsgl0zQbhxEY3F2YSBWgsuFPkA==,iv:pOKofQ7MWfiaREHhzN4GpIpGso/2w1I6OQU5khlJJms=,tag:pf0mY18/99rEIIvi78aGvQ==,type:str]
-#ENC[AES256_GCM,data:taL3NRErQFTAUvsO36SVjcg1ngYTPqt8wuubtmYA8MPCwPnEUVIvduoHZNKB26EWGaJLn88KMOn6jvgVcuROnqhH5kxE98c0DmGUwmpRG1LYZg==,iv:hYV2ZI0OW2RrAygb1UWrzJx2Qk673lhQanVtbvlLW7I=,tag:uf2bz7+ONqYfle6cKNLH5g==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:9k3meBU4hIwZiJ72g4X9,iv:VjGF+QVNEciiLBT6tApEd4KyXmFWT2ZDziAR/O6MGWs=,tag:51IUNnTynXtwgm1HL1MEeQ==,type:str]
-#ENC[AES256_GCM,data:An8vOlWWZ/fKsUrRgykVHXaf+DtuW91fTZfh7kXyPELw,iv:mpYKcNuwz1iihEf2RfmIJeEsXKKjI+HCpEotp3Lal04=,tag:g6XN71MkxzPHLVB2buQ0Hg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:dEmyNA/+PjFvS/qc6ypO,iv:U+ZBASzG2YJPyQ8u4CwGlr/LPASiR2QVPUllCbK7dRw=,tag:gn/jfhmTzhkx38dBO3tzjA==,type:str]
-#ENC[AES256_GCM,data:6XThJaIeZsSlZtR0ZrD25AsvglAOL0tBIKsxA7qId0FeCLcNEeRWDe2WvUe+QeNy/ABfPrMd0PJnWKAhlyIcXIIydsWz6fZMFvcVVpkqEyA=,iv:3f1vcsRTprtjT7kjZbJc/Jw9RAwRMlBZQJq8PGkWbEo=,tag:1mW9bTK+368XigtExwQyHA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:qdec8VZ1CjdNHjVYuWWQ,iv:hENZTZVAkegmW5dJ/EaTv3VUw0iwQGYAaQzdV2tKIwA=,tag:TSFc5dLXDsfr7mSPZK8UfA==,type:str]
-#ENC[AES256_GCM,data:dKsXJqAJDW4F7EzRg3BPC4ECXV0pYxNun5QFsIre8l20kZ7XhNRW2JEHZD5NZcNipxu6ZvZ5qrF3eYUod1lrH1CezFFTg0ZRXZjambgFGpOxgu5NmdR6,iv:9p3sAyQGeqA46RP6wSY5FbJwOTLsusORL0prXhe09Mw=,tag:/DEkQ+6fCMhmOsuRPoBkyQ==,type:comment]
-#ENC[AES256_GCM,data:1XAOctrTFty68GplFZP3n4FOR53LVUCPuRBKgMRSb8gCyMe/WD+HL1P9I4nr6uCgsSZuF0qjHRCktzT+FDSnKuv1HF8Cas4dQs/7Nc8I7WGqLMWZJNVebQoWHGOtuayXGOd9AWGoBsg/GxkeOWTAKGEsy0iSAFCjuPoUiA==,iv:D/8T6yD91K3geD3MPs6ItusbDp/AXKgISkBl+Md8ZYw=,tag:KuyLCkbsUhEeoK+3mE3kqQ==,type:comment]
-#ENC[AES256_GCM,data:dE8hBPwGaVNxAS3V4AJOOmaH3Mr+eIa7R6MezuAKsEiILCb+IyHUaiv9McJDyGeMyMrpywdpcdK7ia/UBCF3JbFblJ28p0bnkjevel2SnYM=,iv:JCC74EmWBNWzm+1LoDE5OTGYDWloFasmZcM/DU+fGbo=,tag:0qt5N5HNP2ujtQi3F5nLAw==,type:comment]
-#ENC[AES256_GCM,data:MEffbMFuleHDTdVkHDkNxVTMeCRXiy82ISl1awTE1iIRHOvk/I/Vf5RTJ6nYOCDZVpVHpYyS,iv:xOI/L7TygzlDWqdaQtR7t9ShHJz12s+mRiBwjT7iUw4=,tag:Ob8EMRxAs7T3pFxZzPHUuQ==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:vcgoz/C06lBf/kCk,iv:fC7ecqQEiZrWtvg0wVGwxp9iOcJf3SaIH28En2U4X0k=,tag:P01mdnUK838MC7wcJV01mw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:tLe5ZZNHfh+SiWRZq/PcV0Q=,iv:XwrU0NNVoKLlH3bMeoHtzloKNHVZM0Kr3w/v/+MqCjg=,tag:SaNndDXUhFRxjBe5UunotA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:V8iXQGYEhDNuxHOk47nPNZsXfXLaVWrjVgFgzltB6JA=,iv:A7tFAK42l4YYJb+jr2HGuPKg7hHv3O672H0HBwVJcKg=,tag:lP1G+c8TyD8uX1qNShFPfg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:wnn+hSzHjK/4d1YidGZy+GdazbxN2vRwmRdKGDCfswW/iZahv/9q/A==,iv:VOacJAAlmfg7xYu7TCL+mEei8YbPDz9FIeQ9SAbi9DY=,tag:HidvKRak13jfwzR1HoCScw==,type:str]
-#ENC[AES256_GCM,data:wEEnOIqVSmBfF5M7HBFCT/pTAnHlYLrwSynW1B+U/gJtmjMlvik1cRmf8xLxWxD0Vj80k0rHTLrJIc3G8WiCHw==,iv:+nc7BleCaqcex7J/XcPikshJvlIuWu8YhpkBfFsuP/s=,tag:Z8BD2AzR0LO+S4qkL9HCZg==,type:comment]
-#ENC[AES256_GCM,data:7wh3XpI8qNkmKQGt1+unKUJMpGeguX0H0ZgRtqpx/lzMwU3fz8Oysiu/nZ48BsEfxwlEg46FmRc=,iv:gc/3nGMdmvePrgma0iY1O55IaclADkH6RW4e6lEEm3I=,tag:J9dkmOeGpwV3MH+jcFXT5w==,type:comment]
-#ENC[AES256_GCM,data:5LrLi9tniWffFYQgb4zWaNgXu5GQxkH7ig==,iv:WPlhYgrjAYSRLyM/H8nHgFhQOSMrEFKqoan5pvDeLoc=,tag:NsU0Hf7rcMkTuGhZNlyqyg==,type:comment]
-#ENC[AES256_GCM,data:i6A3xB9AFP/Gh6kJWlKvdrMTPprs2Cz46x/1JYqcMFU7mKT4srquEuQmp97MOYhnVviap+RWUqFv5xAfzpoVbp1TYXJof+36ELnwiVw=,iv:FeCh705UIz6wIAxLMPUIbsX/4W7wRUFNdzZfGnSZfuQ=,tag:slRJKV2JZUC0I24BmFvP3A==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:Gi3RUV5hEXZR60F2+LWOX2/WpetuSY6JOEegWD3cZIorYKj5BIZX5OFf+BICc8iL,iv:SuZQ2NKNkgopnxUEn/4iW3+OHXb+Exf5qDwVpQnovCw=,tag:GItxKS+IlxesQJzlWFvhQQ==,type:str]
-#ENC[AES256_GCM,data:YwYu1x867tgGjrlY+hDv3q3Sa+m8V3EZjmCWST9E01W9iAK2NGltOEpAUGMsFWLTcDFWXcmbbECQjSzxA5BOsJhpwKTADZM=,iv:yUVez+ToSU1Y4w22i0gj1jqhymNfD5hjQZg+Zudij+s=,tag:fw9NLJ3NATatsP/pQM1iTA==,type:comment]
-#ENC[AES256_GCM,data:KbHVXQW5R5IpHC1l8VNKkoR/FCkr38nCfXRHmpnwtLQspR7g9B1C/GvkbFZ8qQMfKVg5amuD,iv:NrLet55bvqs0MC3GkcEx3JXtxiEG7Vdb1z7b8nVeD3w=,tag:GhlQhAoKxzfihsl9nK/XHw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:ePj2p+wXfA==,iv:oYgFloKOYdZWtGHuTa/VqzTpcem5twwyZ23gR0aSNRo=,tag:Dkdauz4cL1yo/YxBOuUW6Q==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:fn2HxMmqg7SdQJ/1J0cdvyDP4s8=,iv:/8nzL978OHmngTju56MmlMbb2cO0xmoC+0qRiR0PCEA=,tag:8L5+uLYMbWUfCyQzhNHJ3g==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:5TicMFxHiyOwD+8=,iv:qlH4b0X2F6C7xVfsTGgKpVCoXnSZLNwNf7k/h9kMUJg=,tag:1dkJ/Z9xoMdedBUH9EbuMw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:ScotpH2u/+gES5RqUpgJ,iv:Z32AnVblpxQ73CRz7nV3pF6knFSEexggd+19EcSZRm0=,tag:eFAjtSNIWqsbRXGDnb7XLw==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MENbk5++fk4fiB9KmBa6aScPobLHfvSZzg==,iv:raaLKGG3PBf60SlUcAqi2Q7+TFJ0BOlBU36pbvJ736I=,tag:hdbHtlzbAqputdoeIW/UJA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:zpeoFggOIaRF8T1JJGp2AXdIjQ/iUAAc,iv:Ieda7eACUfvJLXkOf4Z4eCd8JeROz9hroz2FAWfL5J8=,tag:j5JSto+e6xBGQ+jN+rRuRg==,type:str]
-#ENC[AES256_GCM,data:Ykze84wnwV/keHQo3Wg7NHqWGVlYZ7ftKHWJk2vEOJpOMxzu1Sc=,iv:FI3n4orsf2tNMRNXLVn58ieBhReg9nG6ZKFFOWs/q8E=,tag:SJRlhaQZf0irSaCwGQwD7Q==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:eGjh5aKdA5LWYuwy1I8yZeZAM3o=,iv:ESxs+kTIvvV6W1rgGetGK91oyrUAassdshm+9z7GLeo=,tag:uq8ouVEZqyI9AdBffdY0Gg==,type:str]
-#ENC[AES256_GCM,data:lbaknUXGsn4F0GanQuw=,iv:kpZ7ta8tgqS37b42MN/E1XhJ2Y5YoZayjViGGUw+Xi0=,tag:OGpoaQwZznJ6jYeB2BvSzA==,type:comment]
-PODNET: ENC[AES256_GCM,data:B8BWyVjAJhAIYzvA5Q==,iv:QOexi2QwzSSHUfw1SvH5a5JD427mfuSXYEkdoPgjWEg=,tag:CvSyHFD68n+X49wdzZHLaQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:DUIQ1/ncTV21MeTsBw==,iv:6cVTAjM2hp3rU459EnHwLnIVmtUQmKNKvBvs7Z6EXtg=,tag:KSyqIqJG9h7NyRRjiNM57w==,type:str]
+#ENC[AES256_GCM,data:cZ4irgFP111dellM9JW9fKwCzCsp0IXBiC3rB+TqKLJCHeIDHepYwycqyfAkGQfaEAbEFCOI20K9Mnf8GuE+MRw=,iv:JeUS+HkCCN2eOKwBnLHEoLev/dOOD31TAmV0wXbCVcQ=,tag:6oGGBDM9ob7PMATA5uit3g==,type:comment]
+#ENC[AES256_GCM,data:xVSx4vj5Wz97VhIpFBEqNGVqFhj360j1F9zO5V1gH7+Vy8uRF1L5tdsBXuA=,iv:a85g7/ew6C1QR6NwHdianf3Iyw5x/VFL54q7SqljCqI=,tag:+IjMIs/k+8HNjFH5hmq9RQ==,type:comment]
+VIP: ENC[AES256_GCM,data:xDT3u3gF24WaqOCyqA==,iv:c5oGuXP39n9jc09FUCBzVrOmQfmaQCO3R+HGNPpASd4=,tag:UcGVnWgBzOsu/lrAx9EzTA==,type:str]
+#ENC[AES256_GCM,data:FbgvBYJRZyL9z/kwTMkpaIozjGBzp9JVEty3,iv:A8DHl/S9btRmCOn1OK5YND+fr4Ya7JcGNDITKk62+FE=,tag:9EQP0+o1TO154Z6aPt+kBg==,type:comment]
+#ENC[AES256_GCM,data:ScOepaPNeUjlMgq3DFwDZPUMf0u75k6o3wrQOTDJ1TbVlHp9MJA+VZfE98JdOUd4CuByXed1beR+UqYAeREkxtnn0Zmj61WJ87iMXCAzyheqziIqcxMGNHI=,iv:1HZOkge1CSL1AA6eycUV9x2Zmk8bCx2FsxseKZ9TFFg=,tag:OerDatyK7x3hrmlsJQsfLA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:uBeU2/0k2lmB8wcHx6c=,iv:EUQwR3AhE2uxua+QQpLyQJG4FJma0FzDrg4FElqFko8=,tag:z6LWW26XrOibJ8thubyULQ==,type:str]
+#ENC[AES256_GCM,data:ddkmiriCYVYiSnZMI8jojRQnAUZJRUa/SLESQxTZcnPWEA==,iv:J1RhZUpcrMOJSiYmwFOsT14vZy2AsR4QQawXrfDE0sc=,tag:xngC7LbxrfG9gyLArLgu0w==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:eEzxZLMNmecwbEAC+Q==,iv:W+1CwcMbepusIBaEWskCOdbB6oLLgn0wZj4hVGR6fS4=,tag:Egwf5SI/zW4oLlCJyK+vRw==,type:str]
+#ENC[AES256_GCM,data:Qgnw5jVBh8KzL4j+U9Bt8GCp2tnYP8rQUsTJrD25erb7g18AINDGo9/m8YdBksA=,iv:JC89wQLB5Oc9ib9TCrG1azDxj2QXTQWqWdrpGmxMEd4=,tag:aQOQnULj9WlajzikT4ZGtQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:GL58pVEKp0ljECKZAUgbpWJ4D+NZeaz0Jd5WLDqa4g==,iv:X0WhBQwHmUiZr60siiGOltNU2s5osS8uFVC+AR7Vhvc=,tag:qXEYR8kVZrkx6hwNVWl82g==,type:str]
+#ENC[AES256_GCM,data:UOY1TixUuTuN9VaK4wtelbiREtZY3CQMHqL7+gpkfX7qIul7GBldJXHAhUNz7RjGSn0YRcDp9iwEgLKBY0DuO8D+jRpMl4TtEs5pHuNf70DXtA==,iv:qlfXJGxaRGIFY0p8jHnMMb54zvvDBw23RXk++FRpCN4=,tag:FxwxSPe1CsSGSZIL+8PgfA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:fskcStIkpFnJD+CjS1k8,iv:zKFLAX8TpGr/2TTli7hWeEXZqZO6eDeeaqVhPlxtb3k=,tag:MskJSD/+Gz3qsjmG+ANk6g==,type:str]
+#ENC[AES256_GCM,data:Ac0/l5XUMQl4+ntJfmqSC1TvBqO5p7WPnenOVXsbfO6v,iv:6m7jiU/kt7ieOZJ0sunKXHQel2VAwVJawOYVvibEdzQ=,tag:ICKvWHEtuqCu93inkSXYeQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:fnlo/bdIOTgjZWbdh6Wf,iv:hTWKYfdogaqTbpMnhBDChbuS/eC1Pphex96JaKDuLk4=,tag:GopsVv3jr7ZDXVX+rES2mw==,type:str]
+#ENC[AES256_GCM,data:wKBul0SmzI6iwaszVH/OKhe7rkyCtsuZA4IFwqQTLRyXsdTOefIjhQznkH+G3ZETCD9cLWkTVy5OSTyz7N+5ArsmEXq6VgQCmMRgJh4kEmo=,iv:WjzX/CEYWGV/cmOYW9afaF0kjDXAiMpkk2bM+h/uDTM=,tag:NTylEbgZIKgqBpApZ9rhgQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:7W16ylOcTEibklEWh4Kv,iv:CbBM/IPBwMK7a3rRBN+EhhEzCvP69PNeS81uRZWFMsI=,tag:J1vuQxg7mncQgmMgRs0PkA==,type:str]
+#ENC[AES256_GCM,data:ZHjtNxx0rKMlkdiZZUj6Mh7H6dc1ONliwGgYpqeL9rZS6gcz19F7/+71vjptxCMs9rtwqtyo5DvY3rOQ1M94YK+BW54xrkxyL+Bop76lUGUw2N6SXXC8,iv:ub4vRfXP9QZv5o0q2CazvYqo7AtYGAP6vRlcgFwgA6U=,tag:gEw2LUsi4Ptx5u7x7filJA==,type:comment]
+#ENC[AES256_GCM,data:qzi0oqjtzXyG2E1WxjNiYae+oQilveiH4Yf5QFoxBy+auQ3zs/wMLIl+O7qKf2kbJ7cMNhQgGrRmp04gwUCfu/w3OabQWeoK0fvi9f5ghfRnU8E1QqP/0OL+lRp5AldesH7PVTc3fBo/+iuEhoRHgnkjGL2V/+XU2NX5oA==,iv:xpKhwerSuJtI0UVaG1msrZqfiJk/Vji7HGS5oH6DlOw=,tag:XevBWnywVJ+rGTVTO+nSNg==,type:comment]
+#ENC[AES256_GCM,data:ElmXnyDtrHUgEtN83jkAkUeJHVK1VHaRj7ax2n26OV78FzZwdOVGmvRy/AVh1++W5AFx5CZC5jnL2lituhpkDsfYTo/f0Y3i2CGsJVSSgbk=,iv:UNVQ8JfDEzZ2/xq+WzVuuXLg++GZqDk2e1E/DH4l/TY=,tag:QIZL6LK1Hmar52OY9pHzOA==,type:comment]
+#ENC[AES256_GCM,data:w+mthUQEBXKngEI1ZN3LmvL6o9omr5kDTOrXtdHuc0H7B84P0rBNG7d0mjd0jv9pWmgCxOVF,iv:UWtFXfolSDNAz1+lLY+F1mU8gcOSAowleew36kVi8tY=,tag:F6GrP49t0dQKQ3gWTx+uUw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:AGIHD8rHS8FEn66u,iv:DVId1h453t3H5TST/jpeLNjOaEcjNfvLdJKqXo97L0c=,tag:8I0uTOIjGgNkCXU0j4Cj4Q==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3fJI8b2MG5zUTg3vogvGd4w=,iv:eVCXwRSfjyvsaEr4ep13HuQkVw2Eu8jbrklnFX2XQqg=,tag:Bs2cvOgor1iUonzVyVixWw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:KNcB8KmL1oGjio0cZ6+yshStSyDblPdzBahnCvBTJWA=,iv:2QZjKUp1YMU2lgp/eqf2mOYmK5bUlFBQ8Fa1Yvbig9Y=,tag:WdAL+4S+xhtXHOGM0+3pwA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:+AeI1zz+7x5J7Nd6qsY3IRTGNtnry5hV253ZuxnGCA6OC2Xu3zVryg==,iv:6pGAZnDoDlob+ndPvyOKxVLu9/12r2jkEA73tv89A4A=,tag:upzNdWwH5ZSnv71kdnM+pg==,type:str]
+#ENC[AES256_GCM,data:WzxakbgNw48OZaZqmnHiofDRIzMhS8JQWqMKvHaFRQhw+6qeMCteKe6q4kt7AoCsSLs+sgJTl8KSySMOHxmNfg==,iv:NtgGxQma70hscxPR/3Fj6LqaFOBTCwYxucupF/adh0A=,tag:zO21FCB0ZD9JUyjaE9FjxA==,type:comment]
+#ENC[AES256_GCM,data:6mrPo1RSawc1gi9Izhu1H4z/NbU4ml7JMXj9TIOn41qFcPmVhuhMShOY7TEZpOorlLvOo82wWXI=,iv:pja/QXkR1WChnhw8yw7esy7fRK2uCj2RWMGovJI0VHA=,tag:xMMqOifKKaZT/l5LWnoZPQ==,type:comment]
+#ENC[AES256_GCM,data:ex3kJF96sqKeehwK+zpdR0RMATVMsLoU6w==,iv:9y9ISKgsP/YnUmEy0oM1v1e5WhI5wvfMxYBhgXH/re8=,tag:vLV+/KOIybedxrVvdJ84Bw==,type:comment]
+#ENC[AES256_GCM,data:pjp/lWjlJ9IFEuVLLGjg47b/4qNb3+0jBADNd7LYpcADK/UYwHSp+8NfiGUwNV7lN31X4GAQvnkyPrAP/HRZPivcswmNgch25C1UzI8=,iv:9t/9RrTqBBJ5T+ryHi7KkCx+wWKMncnRjBtGTtO6Npw=,tag:TrlcUbk2i1oGqWBx2EWgtQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:WjE1Bpk39tMGwcnjf2yHldPvh23ZhwlRd84ko6uswBDXL6GPshT6LMPWU2j5RPbO,iv:sprtBDrEWbkTEKqVF7a5C4V8kfldypOpY6DW4NybgCU=,tag:p8PXAK12ytprsJpdC5YyKA==,type:str]
+#ENC[AES256_GCM,data:0yDbSd9MC0GYtIv1lX/lg8LeM/cWdeFTG87J4FTd8FlybyR9z6zEvnXsbGwv7Ij/8qMd8L2JG5TCrTBTjcgBMma1uFLzdE8=,iv:PvdwqJ7/B+p1eeMcezVd6oBrTpKhtSGMNcQA7X2pDGM=,tag:HCB/KHqnqMyfCTS0Xz91og==,type:comment]
+#ENC[AES256_GCM,data:KYjuoBvZY8nFIf7x6AYNCmGnzfTitzFufDWj/vg7rgEH49k9/ob5Y1SDmowEdA7SVRITDb7X,iv:O9QpavYU8gChMvWSAZRbqS5/kFFpahUJnyTwWIcDLUQ=,tag:q/SvplrXPxMdZA6+/9RUJA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:ZtQPDkL+pg==,iv:WpPJXYfoeuAH1NBQH/9bXOLsBmaavyMi+6hJUO5b8RA=,tag:4A/N4quKU28IXsPt7BNxwA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:zc0ydXCbZf2WlKrEIT74YoGk4ZI=,iv:mGpdPFmrqINFaFpMh6lDkgdRCrGE/OzB6aauHRQgKOc=,tag:sD4g4DJSQD6U52nCpQfznQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:dX55sDQCX+aEXaw=,iv:pz6NbQjbD9JmwiN02aWq7nQIGVdLJlqp8NYiGGld5tk=,tag:iLp54CLAH4vr+6Zq+6DJug==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:2m/qnwx/aNdk5AUwNyh4,iv:E+oZIEMWIVXNqDuYFkQ3pgWUpXQGCQpnvY9rB6brfzw=,tag:ctC3MGWdBGoE3naoMYrtRg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:QuWYPwp4cvSk+aptp+B0Ml5xeyDRniULVA==,iv:AY5TmNB628pzdiEiEI/+U1zMHZIZblTr2CcWMdFxVos=,tag:AURnr2gyrnLmi4uHvOuCJQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:5czxqw1pXJM+W2fMIPGw7/0lVpeoWBaT,iv:rdkF6EFnXqwJsMPjvNXZ2GzKAl8/LpcCP1Y2dvIQ3W8=,tag:NIrj3i5lePDplFkRPUGO9w==,type:str]
+#ENC[AES256_GCM,data:WCOpHR4pA6p9etdtffXa/GWySq6PY8bdrhjpS7R4/4DeYAT5Uy8=,iv:9dbytTabehAe6oYFHOl+F5u5JWDgO1sxliYVMpBey5E=,tag:VypSr9jNXb9iXRHVkifGgA==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:y5+WB2LqDXgcWVnzZi4Eu1LSARs=,iv:RO9Ux5WwvUs5S9rvFtutJx/PUVSokOzoAPuXom5K0TU=,tag:xF1nI7UP/ZF6xHdtntTCNQ==,type:str]
+#ENC[AES256_GCM,data:eoAzkQPlwvv6swXqdzA=,iv:gOJN8Sy3JQgsd2rYT2D/Pb/zrWNjPjtTnQIrG7PHLVc=,tag:SaAYRkPMtPa1SA9ZwZxNJw==,type:comment]
+PODNET: ENC[AES256_GCM,data:A2IDHE3Gwyh8lKRNnA==,iv:CJW9k0AdVmn79+OyBdpSzMOXQlpiVh4Ow4NkL+q6acE=,tag:g/Sl7xNvEY2Osz0jTT99Hw==,type:str]
+SVCNET: ENC[AES256_GCM,data:4bNcnjztpjrNLtLyaA==,iv:a5prcKn1pYaUdqyeeXY+XvqJuInjGqiFhKKSFj+h1GA=,tag:LgOG10VNhXX4UEFsrwjh/w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1NWlqcnc5dHk5UERDZnVG
-            ak9pOVlrcUlNVk1LSDhDaUJaL2Z1MFhqMW1zCkFFMEhuWVZuckhGZXFLT01tb0pU
-            TXl2ZEc1aHhRV0NIVEF0SUJUaFBHRlkKLS0tIERqUGVZQXVsd09HN0Qxb1VQY3lu
-            RUwrcFlRdFV6djJzQXo5SFZybW5zWmsK9tlTqfW/Tzmz2M31bJV7phzS2lmyhEF1
-            o1BjJ9sKWOCjbLsxz1Iy32ssRwLW20VBBaoct23msgAPnR0qf1nwvA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S2E4QUg2dENvdENtTXVP
+            aStGSFpGMi9MTkUzWXBoalZzT3pNQWxRa1FJCjg4YWlmdkllWVBVanhsdnZTK3Ir
+            OERQb0ZZYlM5U28zZE12eTVCYml4b3MKLS0tIEh2NEZndXQzKzZFUSs3Vm9wNkhx
+            bmxnbHlIc2pDKzI0YmtiaW9HUjhMNEEKzZJqQfhbW48lwObAVVpglc8CJZBlts+H
+            pwMP5ajN8xDrPF4XzmuG3f4FofknTEHYn6uZUO0hZ2tswmVXXR/3eg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T21:19:03Z"
-    mac: ENC[AES256_GCM,data:iKbLeBLoetkvyUnt46t86cjCMhUMr7omq5yxm9AbURGfuFJsrQRVz9opBqyldLW9r5kCdX/CoWg8yVtQwW+oB3wLnDLdWDUsV1vCIzWErUhrsLLzQCt+H0yGx8d7BHoHrTxGvejAFcch28WUXPyy805LbeZeku2QIKCuQPtMia0=,iv:KEtBP2jbWZO5/UVrF9zrBHnTI8AGf0dgnKs00CIu6BU=,tag:TpCHTGwup/siR1i0HYPg/w==,type:str]
+    lastmodified: "2025-01-11T21:21:37Z"
+    mac: ENC[AES256_GCM,data:1QFOAsWVEFryn/3ZFQv52sHfgK3BPuhP/ii3PpQIk4cRn3fjQyUiFBZI6c1+PCVAC8oc7H8LpNsNNyXDNjKjOCjPaJ6Sch2uJAiPpOn5ZzkfMzThzZolXbve3/lR8CbQ/8+RWJTXg9d1OrZ+v+1K76udk70TUZGKfSpTeIIYNs0=,iv:bpkqPMUdkMc0tscbwDl+t6sDsEh04j+OMJjYySxn7bU=,tag:uE6c1Si9qTEvKE9EV7yfeg==,type:str]
     pgp: []
     version: 3.9.2
