--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:CTFC1zsWN18kUe7JAc4ZbjIIdbh8ss1dLMKtsIBfC6vu9BO6NJ6+VmU5qn7KKckTHs0/RKGgJAbNiIbwK8JoUc0=,iv:zV3fXFAIVt0BhXML9VYJKS09U0/AYbAFJ99s4UdOiv0=,tag:GbIcRWfKmXcaT/SqPWIySQ==,type:comment]
-    #ENC[AES256_GCM,data:8Zizy+OGaMTaR1CmCIyCNsRlry2Ypi5RV/HNwjA+IYRoO4KDgfBxhFUAwEg=,iv:iuzb++ZnexWpx+BLsm+f/yCDoaQKW8+8736mG2f/v+U=,tag:oD88B13OTtc/Drwpwndv0A==,type:comment]
-    VIP: ENC[AES256_GCM,data:XgfG0CUw/Qq2SbcmpA==,iv:Z2MHAE+4maGtlCZyfk5jl2pmQMhN6NsyLA6Ob47MDpg=,tag:5vLY7Tm4gv/deiTqWbTV5A==,type:str]
-    #ENC[AES256_GCM,data:B4A1Ec9qHpmq2zSP6vvVh9ybvTrAdV68ntZY,iv:kunhZVK2PA1c2SBLyhWT7kHEqDDhb9BJ5LEigtAVwiY=,tag:NuvAkCMjK00h/r2+Uuifdg==,type:comment]
-    #ENC[AES256_GCM,data:rvCA4Wc+I17i3ReWwL987C7lIMjrZiH1/JAEXtX92Mrl6O4aevGeOP8wGuVbs4gVrX3ibKhphaj4wWU9P+4XEYQisYjssuH33pEZ4hdJ97wE/zY3Jt+DGWk=,iv:NE6opCOKIJp7eUZ2b3WlkcFs/YMukvC8ok0EF3tZbC0=,tag:ffx90adiolqZrN51mLVFDA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:gVfKK8fhMA0QwIsJnWw=,iv:UF57lqp6JQBWLIbd486rdAo908GWX3VjkgkUpwEG3LQ=,tag:47rUe3E464frG61gdTnTmA==,type:str]
-    #ENC[AES256_GCM,data:vuD7nOEC+g6d4XzebSpWZ+WULEBxPLzN9QugEhj5g0ql2w==,iv:fBltWblypmuLvvmj6O7Joh4w2BHS6yHzHJ2Z8pfX4GM=,tag:fgwQTLAXnTkKysbwuHLjXw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:8V4X+GTdiXpoTQOoaw==,iv:CZyRwbHJHa3ESevY88kHFdfJT8TTVPysbjZtfoeCwzM=,tag:pTPrub7YQkRSg8O90Zf9Yg==,type:str]
-    #ENC[AES256_GCM,data:LFNlvwvcVUulXWyxCrBnlDMv7oKlAceqoYx49HhWbong+Z/sRwB1b53jY79BO7I=,iv:eWrgo/zDBWIngAbjSF5wxVFNO53HM4nUa3DDDrZUeD0=,tag:mOI+yrQtpy+xwa2Z7S2K7w==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:68XR+zOl6no+pJ+H98/mFSiSVMcbRzYW1fdMvKOHvQ==,iv:QbXWit8ktqMVKURQeVDVNVx4akeBmAXSq5RmZsM+Z/w=,tag:7riPvpKt9k7MmYpRdU1zoQ==,type:str]
-    #ENC[AES256_GCM,data:lJn1rVH8TfnKZ8YgryrIM3WGanIblcpV6jRucC1wCGEm+s8pYxL8ExT6LISs7zUKEcvrkmZ4w4GbojwvDlWy7kUtG2JU6d13POqaxxHRNOPfPA==,iv:gqwDPFSIe7cewtg0MgetoDsQXt8Bqjc1jhLSWB/gYL4=,tag:vy2/8V3kVC0wHR9FZWzrNA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:dFwyvYqPsUacHORKBKnO,iv:v72eMJpsPouXHf5LClgc5lyxrkgBOKrpGq7jhJj+Pqg=,tag:nrnuCnB5lB0ARSEBnbS0SA==,type:str]
-    #ENC[AES256_GCM,data:rqCIRMh7a6ChaFRpPFS4l+1mhoieaALXhiyKs/sL+r6z,iv:ewO1LwtpqtWKglkprCe9cnrNhrXalpbyUezS/tzpVCU=,tag:S2QiSGKZkDgl9TcNdU15eg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:vI6KjLDa6eR404nETMDL,iv:18P6zZr78Wp0TYdInFJ9f0J19FJaMSazfgy2VvuGjkI=,tag:e/qcfIPgg4FkQ/Zon+c9vw==,type:str]
-    #ENC[AES256_GCM,data:1PStM7BCmE9nbTjlJ4E9/2GWDHkZUW1yzGFNrXfkLr+rSIyQ6mXDRBKwr41WGhmdJgsZlxIKR4hwzTr96F0+Ws96S2auQz1KcyArGCI9bFQ=,iv:TYYBab6a/eJkFZZfoKOCwNoAS68UQ/VeCPq1MT1hMd4=,tag:tl+NqG1D8RL3nnYzQm/Kbg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:BSVh0qocNOZzMCHIntCT,iv:TwlUGTQq8VfIbK6ekZKqlD7f+lw+eApnw2cbnlwmpg8=,tag:i1ve2BtJlj0cEJRACHoDjA==,type:str]
-    #ENC[AES256_GCM,data:Eu3FO0OUU8Kl6fRFwdVAFK+P+jx/6yAR73JqRnqAg84e+A2rk0X15wkO/eq7xspjqyUZVjTlur/YETjpokHo0/m2Xnk6kt97Hb5LG3Myk/wh9yT/66/h,iv:osn4qh2P6RNIueDjUP+MyOBCpW19s1e1v6QqfyRz/0o=,tag:COOzJpOdwb9oTPCbYhTkHA==,type:comment]
-    #ENC[AES256_GCM,data:Yb9b14oH2wJvKJBgmR6g/rnUOPXxYU2KK2b/oJT8ZXPtROEfJujTnG4R59al2I8I+mFYYW9iOysNvKSjxdX9hSHLiEJfIW1ovZ6OGRINbH5GqOIz9cK6qKKS/7qCFFgOFj62xJi207SvjLVGXjOFLoBFh8GdxAyM7PUnQA==,iv:olL+FFVAYul+XV7BHw6qOG5DOulXpJT+uanaW6eM/nk=,tag:z9MUGeT78c+iyX+hyT0lgQ==,type:comment]
-    #ENC[AES256_GCM,data:xC2pToUK8s3YCILwbvo/zJK5GYk5DEtmBpUHRA+jHxRR4Xb6iEFxHg4ayqtHn1Rk5ViK+CZu8Pp7PCBArObFbxt4x6IQSwZL7lg3g5NqpbU=,iv:wJ2LvdpvPQ9t1JwUB+87A5kL3K1CaZFqdsDsasAv7bE=,tag:Iq19j5crfmiaFXUM1a0hOw==,type:comment]
-    #ENC[AES256_GCM,data:Wk2F9r+zgBgTqFSWHSVwd0B1Snl4/a1BwLB6/8fK+Kq9CrGLX4xBUH5bd0PWVY6cZPH4XCao,iv:0diAKuRWmE5gmz4PC7/9QdbW17Xz7bz3IHg1qYYtVpc=,tag:KW3+rkx3dcAgdml8jq6ctQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:ezpVfNy/mZkAjO4v,iv:yoqkxqaqaSjem2Fpylyrdcr31YEiQ7o/QlcdEzUqedo=,tag:iINq6DdJ0fG9CmIxu+b/aw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:xl95OBCMPru6ZnI6inyjYRk=,iv:cxFFzAnODi3VY/EgBGp0ebmZTLSBiox4fJC1ZejlV0Y=,tag:BgFPFiIFDxBZm22IVJm/0w==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:73YKZHKpCzeVG8LWQRdsLolro60XorJzwksaLfJqfV8=,iv:y4T6zVi/VFEcOS36RvedTyce8zcDCLDJGE66uiu0JSg=,tag:L/qE2Hpb2DfgFEJWjKM8kg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:R0OdK90X5GLAeeg4cE/tHWGqFH3bx131/YphN0A1MP8QxB4UeNCSqQ==,iv:V1KHx3q3BUxGLAFm8mcTScTf/tsMrb4okTpO952tqe8=,tag:x2VRkAxg8SWa3Hila8M9mg==,type:str]
-    #ENC[AES256_GCM,data:h3Q+LmQ1hn6yBTqNMM5DGywsT55w6fi1M2nCxNjxzxX7nLPP9j7MaEx2YUeB0ptnLkiJd9Xae4F8+cZ0dbfuQA==,iv:EWi1zMWiZfPzfCnFceIvXmpnS68ZoGAcwJ+Jipnw5Ls=,tag:v1Ea0OD6jmHjeiDDVq3+HA==,type:comment]
-    #ENC[AES256_GCM,data:qedmt2CtE15QC4EAPYhbwGhX8rH05fayZXRBouyTJUOOAum6t4yKdwooqxTMtx/S92UKQU7jFLc=,iv:aQ63oFr1Gf72Hs7ye/N/5MJezWiCa+j+Vz9ngTjG8pQ=,tag:7exN3cH/9eTbaKFclxO68Q==,type:comment]
-    #ENC[AES256_GCM,data:UaqkyuKGpEdByeR4MNlxgqSuOLJflu33Vg==,iv:kQbtMmWd5fjRqw6X68art8P6BwArpDwxonev/VQ2ViA=,tag:Q7zsBfBneE0sZvfCkPrDaw==,type:comment]
-    #ENC[AES256_GCM,data:kSJob/bn1A7GJ9s41ilX5TU+sBtVPzxb2rbApPFOBBKdyfZI4tZp+AL2xr5DIf1Ie5KV7oVa/1nf2L2EoYSm38Xpt38AeiNGP5DGcmw=,iv:h/0O88mr7L1EX7b2w4/C5ZRJhIRZDisWUn/8S0qfKYQ=,tag:aYri7+/W4cKAPLCGGrE5gA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:tBkHCFRrmLSHRc2wq6kCMrP3aH58TuMW8qSX2x5wMW1MryH4x/Svjp4u8b6I9v/g,iv:d+32COx7cjqeYrDovL2DtJHIZXMJ87ABEokQQuyeCzQ=,tag:mcnE3QxE2guITdO8qdmKzg==,type:str]
-    #ENC[AES256_GCM,data:ro8PzMu44xd/90S6aZP1VuWzKUS8k5z2oEu55YXxP6yaD2y6aDAnM3xBtV02ID6ErXSFt+Qd7+q7rO8XHUFnHj5+cb4RsJo=,iv:g3Jthxo7doFV7vkRCdNejDRaTRByihMpoPUT7/5wRvo=,tag:B0pcGtgi4h3qc7Brviu5kQ==,type:comment]
-    #ENC[AES256_GCM,data:Tz3LtDUZYKqPlv0ShlbxAOrYL7Sb8BL/M5frn5d2jkEECddMSwZCieXmBrGgVtvAEahLc1V7,iv:yijE34pyedYpw9zIW6H9h8/uiOL0m0XMUxkZeE/F/LI=,tag:MWMbpBtO7DT56rXD2aD36Q==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:FV/ctJtqxQ==,iv:SsjHhk7Wvl8JqbchEbsTblkNmr3PbI9Ze8s10zDolg8=,tag:+5IhPgBNmycElmIopfFPqA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4hnObNrIdLe6BG7OikgcKUuXrrk=,iv:nwFpjfpcp6ckAH8bSnZLhNZuPlPT4mmTFIfK/pnnn7g=,tag:ZwrkyDwSD9crxBZsXOMExg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:0D0Zjx/bGPG0Gkk=,iv:ojY5wVutxwkTdAQG4BZyPoPPcTRhpR3FYBGq45UHywg=,tag:SicKORmi1YDxTBYudWijJA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:QnJ2aB24DFHyU0ll3/Uk,iv:Nkxp02Bi0oEjuv6wsC3Y6CIxTvmrSFAwMCgRlEsgnOI=,tag:/PfbyKSe/8rAhvQ7o77L7A==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:P3K3l+Tg5yLNaonH3t8gkjOtLlbFrrykRg==,iv:bcgepZ0Sfov2H8PoqPztge/+SNSMSwub1cn5iStXDvs=,tag:aDWE+oqmlQOIFVs9K2l1kw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:RgpnIk6RWjzaKaUCj3YPO1hwqUA9jdl9,iv:X/h0y216lLb5Z6EPv7LrRjt1jBcM7p+yfssWHegTB/k=,tag:M160etEziPlNhIPn8r+3xA==,type:str]
-    #ENC[AES256_GCM,data:uiohsyhoCbM6a5G391yyx2SjcWq2YZcvT8kNWq0CwfcfIIFopks=,iv:dWMjyK50Oy1Iy0vMC0XBdR92PkWQtBgO++qjebJuegc=,tag:U6DH+wQTsHt83qajipE9Nw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:cjPuoBLSTTpm4DDV3bnf8wuCbTE=,iv:oZj811TYL2i0oI+eCfofYaKLqrEskCPfob3uhplMw1o=,tag:luVkvYa1+odDArKPGcxmJA==,type:str]
-    #ENC[AES256_GCM,data:tpH5RYslDMgKiSrU53g=,iv:SgRLmmBE/uEc96/b6jkFsxh5H5QaTwRO1ZAqMdfLzUo=,tag:UnwcQ/DDmWPB+m4PxnsrOw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:bZDRsqTmP4NbyqyYeQ==,iv:ktxL1OP8XIg5l9wByxv51jA2bWGpY4eYa6jOzwd0QyQ=,tag:T1kSV+8NX3geb5l3vy/TNQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:IpgIpRnANJkmOQ5aSA==,iv:SPzkD1A6g1Ub+ecZwcbd7xkgDVF26NI1M6jxG/izz+g=,tag:b56wza00reF4XIHsC/5A2w==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:5K1v/Q==,iv:J6SZgaG5ADunkJNF4nt9Vl4s6A79NlMflV9qwvkdPQk=,tag:eYQbegMR4xYOpeJp2YJWRQ==,type:str]
+    #ENC[AES256_GCM,data:ri03liHySjsQO41U5ftPEGAdY+Ec3IbYGWnY/TYtsctOkaPd9i64XUo2aAk1cgyBXEbKIEmxISjd51AA69YWonk=,iv:RzVC5fMw/lU5qQ3JEVzE/h/tEhYxul4tCFDVvOuSngY=,tag:eGR97032JgyWne0nvC2Q7Q==,type:comment]
+    #ENC[AES256_GCM,data:QWsY2ofuWFHxEDaasiay9fSTMWAZ3Tkc90/ZWn226RrnTeP02zCfq/n8eg0=,iv:DKq8VU+VaynaU2/AVi+htoCQ8ORiq6grpNn0RK4+HyY=,tag:EuumkDRceV1P9ryw+A7+Pw==,type:comment]
+    VIP: ENC[AES256_GCM,data:ozeOzHN12IBaplWZfg==,iv:9d5ao4aovN8aLwgZtGXtaxMWlAmWz6FhTD6DHsjVIys=,tag:pLgT7QC+xnba1S7TAXkI+g==,type:str]
+    #ENC[AES256_GCM,data:/lNQ+yd4r/XKTn61h377RTa9u1iLzmVQHvjd,iv:J2bUdg/L5GwYaks8MR4tx3KoDxm8Z7T8FcX/Niw717k=,tag:DmijC5Fom/NdR4xitMlyGA==,type:comment]
+    #ENC[AES256_GCM,data:+gj587gThRFjvhlid5lnV7+GKbEsAchA8D8ZtbB44A/xZqkloCglJrOX5zgQZJkkhHspHDYwLkevhzsLtLjENverwWwF5aQx6NoVq8Vhgf9Ehbe0VoMwjWc=,iv:mK6FjSqO7v+dldu6LENIsdCGy1pdZg5Co81BE01AICE=,tag:PtqNuvnwH+PcaSYpnPIhUA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:fKG4XzxaD/Kl8lrEu9o=,iv:H2OcBv57Bw6ANVkkQKpsyXelHKopmQJ8nAN+vB5v3Us=,tag:UyrrgQ5HHv5HiQx2fZYGqA==,type:str]
+    #ENC[AES256_GCM,data:NmWUqZxcYvz/7XhXuvBkYbTCWgaJWQF+jUgv44PBai/4JQ==,iv:v47NlXE3B9Vkffuef1xkP6t2N2g5LS/NTd0+x13uly0=,tag:FZCPoasoCY4x4yB2L9zAPw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:NRWyipsgLTT0JU/M6Q==,iv:hccA03vP4ks/YF6l0i3BMuCHE9ildn5JNiQM7sLzLeY=,tag:4gu8fUB7I6MLVX6H5I5FQg==,type:str]
+    #ENC[AES256_GCM,data:bQn+fbKRUFFTBNuADH1szVh37Xkjq3MvtsMoB7bkMJa4pq7O48nXWRCHzVeQr3M=,iv:bXNikTv7lcNj0mb48qOO6XiE7mgPot+MrcQHxw3pF5I=,tag:I+XwqtHn7ql4x5ReHF+2ow==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:uWcu0+3n6BeCaHdM7AbM/I8GWue+HPmnjhD7fi0MXw==,iv:4XejzVuUFBRSAy5Jaw/qgT6YdbF8GBDRYAfwjvkQD+A=,tag:R4mjOaw1kwIGRKuToGU2ug==,type:str]
+    #ENC[AES256_GCM,data:DzFknGkmZimzef4v7Haneo4jHDJ8VZUwPRVsSQvNhQH38IUy0r/6Fu8CQQ0pw6APmA+8axUyQxkD0O/w6R323NsX4ak6ChUVsIKx+InFXkHIcw==,iv:3ujPwowY10DDcJBHT6Q+rb/KyO1sKtlQR56cKlA/VsE=,tag:f8vlMCKRun5R2JsgQwUVhA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:VhIeqXJHVjyQ2+sPYxLX,iv:LFdNSDiUVenxCTwuYPNkPJiTyqeu9AVzXwrTCYTyWMs=,tag:9NdqBmLx1vVPdEnexPefEw==,type:str]
+    #ENC[AES256_GCM,data:F9xeO6mXadC84AXt9bG0xiQIbl8wUPuDzhqQftRXUI+o,iv:3zz9DbyhS4QBZLvnCygGztTmTuntJkQ5qGg7v7ivcMI=,tag:8fV5AA8OhwzkvbclSk0Huw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:60JVHaQK+Q1JefMs3fIo,iv:vsgP+OkWExkP6OwJAcQuN/0LK8E7V5Brxm7Ixb/6IEA=,tag:t12NRRv9eQnQ/21A4TNFuw==,type:str]
+    #ENC[AES256_GCM,data:zEhPjNIW+ufhsR3K0LWqwXC7D0aNNJForiYl7xZwYhHR95UtBHv69CkhFbu7VrN1JKgsEWJVYO/TUAdFllQSCXCKesWV1POpvTHlz4ormAg=,iv:M9j66C0uw55zcRWI9bAadw9cAh5xylznBTyzMKaDErc=,tag:aDagom00c9y7FwkDzOTcpg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:R13x9ZrGPn0lRxIPaqTq,iv:WgNRVWHZRHKr4dDnoj7ipCU9CwJAM/KoVn3OEoiYZEc=,tag:XTRcj8FZYDmF1dhFA6QCrw==,type:str]
+    #ENC[AES256_GCM,data:MGLKRHnd1btspUaQsPH1iPNAXRcSbZp8V/7Ql4ici/5WHfmw5S+W6I8M9A0eOX9RU2uVdws0pyEnJnWFhmzTMPiHv1aRyIsut/KebomuIdw9FOQ3gRZF,iv:keBv6mGKThRniBr/OcrZRTT9esCF95kwKbWXksGAj2Y=,tag:oZ7pkrQDibvSLujFlaPsag==,type:comment]
+    #ENC[AES256_GCM,data:S0ajoGHUE4TeVV/6pHZq0a61+0YW43msmm98uyF513DMMqxRb9wrbM5DBpLJqZjGQkf+tVq7JAfg7VjQkay6/rGalDZhR+jc6NjRPIFD0aZIMi9wuKx3kfD1atyRiDDPlR1HM+oTXAvyo6aCMUMy5sGFCBdJlfloVQKlOA==,iv:3e4Ny6M0mNVDYl6Dd9maTfhM7mTli1+aBmdd7hQhCCs=,tag:3BehaTn/fzaJqx4r7JVb4Q==,type:comment]
+    #ENC[AES256_GCM,data:lixBxa/v9pIux3uWUlh4FCvanyQEw3VI7zuRtdy/IGad7Up4/nRIF3tJF9hxnOWzng7c3W6wvFv12IELUEGmzYgdlTqYYlUt0CkdjZ4eM0U=,iv:llsaZ6yKvc8mEtLT6j/FeTAVO4e7c9V4zDZtENsEZ/s=,tag:MEuSQAArQN8vZwdRMdnF5Q==,type:comment]
+    #ENC[AES256_GCM,data:+UoFiI/Qp+vQFWZOXLi+57myZvmNctg+x38k9cs1p3zzmsDdYHLx2rtkQyCxi6hXaBSrsfNz,iv:bYLcZz61j0qWBPC3WuV2QZnk/KQqJpAWx5rgBylkubE=,tag:LRLnyeya62tXZG9CAGvMAw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:cC0D4jVFNZhS2NSl,iv:zYrYs2CiIbU1CDFamp04fn0v6aTaQw/awb3i1YvQoHE=,tag:uq1VUSie5VseY1fFrzVpUA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:4MJd89FH4k7ypO0/BH2uIgU=,iv:LN2PolzlpxpZdbZ8q+RYU6YDNyJOcoJvs+4SfYYT3Qs=,tag:CpfFG8KwM2vBsFJzXE4aMg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:9FnDj5Co2RieO97u2erTaC0iZvSievgPBiV6Q8YafiM=,iv:0n4MECa7mFdTKx3H0auRVrSvQEbDmY76y687zP2FfPU=,tag:Y0MwWIs7dR5Bx6CznsvdOQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ot29QhBNKJugjcmaMTyyjOx3oNtMLdgzJ2X/KXkLPiZJLmTssCX3gw==,iv:JOrZ08oju6Cgl0Fq8I/tYHsHFUyiwlrnNNPI2HTM0Ko=,tag:Fb5ahDRlSk9bc6z6e3oNZA==,type:str]
+    #ENC[AES256_GCM,data:VWLMAq++QXnxRWP7JdBLAk+pNz7JCo8HFWpWnC3rDOYyqCO9C8Gne3O4QpmBZhhVJsaHHeij2gdto0cLV2z6lQ==,iv:yVg4GlhuIflc2Qv0iFWOxEkAhVgZTVnOTAXCAQoYZ1M=,tag:4EXlGtd++9k5VPR3+pamHA==,type:comment]
+    #ENC[AES256_GCM,data:hidjaBCkDBux9dLjY9THjlkcX1QucT6now4KHHyQFBzwq+mCcEo7OaHw79KWQrzZNmOmixmubJc=,iv:JtYbKFH0liPzHQNpDVkZAgtero7KzTJjYHLdxTQoZFw=,tag:hzrhD9dpLNCvCMBoC/njsg==,type:comment]
+    #ENC[AES256_GCM,data:qjGQ0dXWlFgKh52hnojF0ZzDwfc8Ko3yKQ==,iv:DZnh366uUvxbQ8Fr3SYIuLTfh90sBSIeqBeprIzgCTU=,tag:7TyjXN2lfxv7bmx+IJN5Aw==,type:comment]
+    #ENC[AES256_GCM,data:rIXZgJoAQtBQJdxkX1ITKr/CAYKpkenIQaPRk9uJa1lk+VrjeYfC2J7XVnF+cD9zpe+7vs05npmNB7yzw57qdWfrSxK6MFYIvKV45Vs=,iv:aiLlPWmsHNrcGm+8kc2NTAA/LcXXrPNWT6wO1ptPEHE=,tag:UoUEiYpLvfnm82MHRuP/RA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:EN1oC6LcT5watDj5IGyunTrntNAFWHIKbpkctjK/V1StFrwX1m4+xbnuCLW126Xe,iv:+Kd6Yd3tOs4BVsUlP4DYNLYu9dHpB/JJ+/rVcezhw30=,tag:uzBM1GzJF33Wh1ZGtXwW3Q==,type:str]
+    #ENC[AES256_GCM,data:XH+bw3pr9UmZ7fFD/I6M/10aZOh67B+aqUhedBvxeWQPTUnH69bFjQF4SwwPQU+QtOg2zUL0LHRuub7aWMAQ0l2xUZml6E4=,iv:HCrUGycN0BPGE6SeIyulWP18U9tEvJUMXhRAY8hhsAw=,tag:Z13zHIxSK4xOH7+fp4+SiQ==,type:comment]
+    #ENC[AES256_GCM,data:qUDIJLmSXC+/XHmHzvwX9K2MZ5wKAoC+M7CSMkKhCKX3moDckyRZxXnQACVc3sg05Jg72Npa,iv:wuBhArNSzSQenui/40xCojCsDYhKSRCvlw4wchx/pdA=,tag:nwcPO7dKweS6uzgoBhc44g==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:7eilQ3242g==,iv:2pWLuPCJmE9XOK22z5x3eiLopLJZcUDrM7erYF3FTtQ=,tag:l/t7Gd6AYHmldROR50sUEQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:KhENvDeKd/A167YRAtsk/VWiyw0=,iv:Kh6EDV/z88W/qJLs/Ux4U2PCT0xlCjatqyQOrUKdJ98=,tag:d6bhYl6NdMaicO23320caA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:vjt0lVJWdy5HZX8=,iv:7k+dqeEXdyWql9Cd5zDkM243cfzIdg7mfOKka41h2CY=,tag:xmGSLDIxUEWwdNzT5nYs7g==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:T0NA9bvD/ahVnnA6WX8q,iv:ERXOxQrwPydMb8mV2EydVny3oeipesMVjfg7YqY80wI=,tag:DZ99fKEFB6NycGwvpRraxw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:lfXFK5dP0/kSVnHapVs8fLilzDuA7JRtRQ==,iv:Ef6kKeiP0QipEjHm93VC1pZxB4LrCIhyrtYlsU/C+OY=,tag:QOliIQMgGn24MRUOaCfkRg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:dEO1fhZ55nxYA0y5Mf7kFsFNNc+JOJMV,iv:Ejhtfkve3q5VFn754RPJPubucCzejUnp1m9qsMryYmk=,tag:8RC8TwLAbX2NtlTxfcZ98w==,type:str]
+    #ENC[AES256_GCM,data:zbNKAKnhEBowf/T8nj6CYZBVuCRra/DuqplrNyx0luGUneEf7Is=,iv:exWF2ZE9aJYUMEYjdwHR3+1gHzWAuAfkEZmDLMoG5dI=,tag:K4cEtYDt0OxQkNhabPyHxw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:0yjfUNc5lYHvKkptNdgLdhMk1WQ=,iv:i7hMlg4JLcM2cn80ro30xpuK1G5mtKqiPXqgbBoDTwk=,tag:rNod/NccQ5xHpN10pxgWXA==,type:str]
+    #ENC[AES256_GCM,data:NqnCY5Jg+vdL5+5zQYw=,iv:HqGNCw+pahnL8xESOgZMClFn70NoucVoZuslVpcejgo=,tag:01hR8UUxx/4ZAZ8t0sXy1w==,type:comment]
+    PODNET: ENC[AES256_GCM,data:vthsAbQIZqgKJ10fLA==,iv:siEgZMWn5QqPOgvGGWwAJmLDwlotck18y397bwpbPBA=,tag:j/ZsJnNgnH9utDtUvJmQVg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:/+sUeEcmu0wlXgpC+w==,iv:HG7+gic1jF4pSHMiVfuYqTtcDXitzYwaFzQlv1CwEbo=,tag:Snsk4HxdAE/xUQlZLYxirQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:UFmnVw==,iv:Sav4tetQQSGxGehr5/AXFyM7vov687VRiu8Cm9MIHIU=,tag:wvZRXJ43zBZn9q1Q5ktxoA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVeTlMRncwblNjalFVZytZ
-            c3Uybm5QaUJlQk1oKy9wOWRzV2lzWnJGSDJVCnNRWWJYTmE0eXQ2UVl3UXNZVkpl
-            Z25CLzVDRStuanJjNFVFY3pQVEwxS1UKLS0tIFpIdlVxeG5YUW9QNUxoWkwxd0Nt
-            SUt6K3MrWWd0Z1NkM0k1VExrWXZ6cFUK2bVk6W6tgQ8dTVaT6DlvHtxrWHQgDDVf
-            taZV00HBaTSNsgdtIa8Ft7Lwpem6ziJZYGEUXNW88fGNqCkVoYN3dQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0WFpWM2ZMKzFac3JxbS9S
+            SHpIeFhFbEJVdnhiZ2JOcVJ0RjVEcUNvdXpNCnhPSmsrbktkaXpMZitDN1RrWGhO
+            ZmJOdjlzZnRMeTdCY05XMTd2eEFENDAKLS0tIDBLYVpiR1hsODJ0WXgzNTlUUXBZ
+            bzJPc285ZDBOWWZVNHI2N1RzRWhnU00KWMbE2JV/IddoglWo/2+TNKL7ERxHDYQW
+            Kzbu8N12tdZ2293JOR2CITNT639oV0aDhPwOxxLfygWKwQvzV/DjEQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T21:19:03Z"
-    mac: ENC[AES256_GCM,data:SiAVwZYwrQOH23vfBf5d3P1HJFOlppstJX4Vs+Q9YkbbgBOpCcwhXF56sBh+BpaMyufP8+BnnimgvBogUsX3R55SSIz0sswGjYRAImxC9irlCK62VA6U0+p193Qa94KOIiU1PLgeHJzvTbXS+k+Egii3SLo3zsWvQmphsFbnIBE=,iv:7OlHY1nolMhDooS1I1sQtnFiCBNWEFndjNv7ij2WBcM=,tag:wMBH/Simbeirz1UwIHAaOg==,type:str]
+    lastmodified: "2025-01-11T21:21:37Z"
+    mac: ENC[AES256_GCM,data:TvnNh5x/mf4rvrCfECTkW2W7l0rDrgyKvCmu6PKdprdoRFLRdCDdFdrs6zUPZztztDZaoL2HvnZbhrkejGrEd73j16xtDMcsn6sPQ4m4Bd3E89i5Wj65DacrCTH3BfckKqkQZcxVfNZOEmkLZA9/HMTBidgL+cu6h6+9abC8M8E=,iv:HQ/g8iy2FBjCH6U6SpZA74e0aMgLz72L+wmISF9lZsg=,tag:vGMs8e80T4P2DHWIEQaWHg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
